--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <title>Cool text</title>
+    <title>Cool Text - Advanced Animation</title>
 </head>
 
 <body>
     <div class="container">
         <h1 id="cooltext">This text should fade in from the bottom</h1>
     </div>
-
 
     <script src="script.js"></script>
 </body>
